--- a/examples/example.yaml
+++ b/examples/example.yaml
@@ -1,17 +1,18 @@
-model_name: "microsoft/Florence-2-base"
-wandb_project_name: "Florence-2-base"
-run_name: "Florence-2-base-Example-v0.1-run1"
+model_name: microsoft/Florence-2-base
+wandb_project_name: Florence-2-base
+run_name: Florence-2-base-Example-v0.1-run1
 epochs: 2
-optimizer: "CAME"
+optimizer: CAME
 learning_rate: 0.000001
 min_learning_rate: 0.0000001
-lr_scheduler: "REX"
+lr_scheduler: REX
 freeze_vision: false
 freeze_language: false
 freeze_other: false
 train_batch_size: 8
 eval_batch_size: 8
 gradient_accumulation_steps: 8
+gradient_checkpointing: true
 clip_grad_norm: 0.5
 weight_decay: 0.01
 save_total_limit: 3
@@ -21,9 +22,9 @@ warmup_steps: 10
 eval_split: 256
 seed: 42
 filtering_processes: 128
-attn_implementation: "sdpa"
+attn_implementation: sdpa
 dataset_config:
-  "<CAPTION>":
+  <CAPTION>:
     - "/media/xzuyn/NVMe/Datasets/Images/Example-Short"
-  "<DETAILED_CAPTION>":
+  <DETAILED_CAPTION>:
     - "/media/xzuyn/NVMe/Datasets/Images/Example-Long"
