--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,10 @@ torch
 torchvision
 transformers
 torch-optimi
-came-pytorch @ git+https://github.com/xzuyn/CAME.git@sr-grams-cautious-8bit
+git+https://github.com/xzuyn/CAME.git@sr-grams-cautious-8bit
 wandb
 pillow
 tqdm
+evaluate
+pillow
+pyyaml
