--- a/examples/example.yaml
+++ b/examples/example.yaml
@@ -31,7 +31,7 @@ clip_grad_norm: 0.5
 weight_decay: 0.01
 seed: 42
 garbage_collection: false
-cpu_offload_activations: false
+activation_offloading:  # cpu or disk
 
 # Freezing Settings
 freeze_vision: false
