--- a/examples/example.yaml
+++ b/examples/example.yaml
@@ -31,9 +31,13 @@ clip_grad_norm: 0.5
 weight_decay: 0.01
 seed: 42
 garbage_collection: # true or false
-activation_offloading:  # cpu or disk or partial_cpu or partial_disk
-offload_threshold_mb:  # used with partial activation offloading. minimum activation size that can be offloaded in mb (default value is 64)
-offload_limit_mb: # used with partial activation offloading. max amount that can be offloaded in mb (default value is 4096)
+
+# Offloading Settings
+activation_offloading:  # cpu or disk or hybrid
+# used with hybrid activation offloading. max amount that can be kept on gpu (default is 10240 which is 10GB)
+gpu_limit_mb:  
+# used with hybrid activation offloading. max amount that can be moved to cpu (default is 10240 which is 10GB)
+offload_cpu_limit_mb:
 
 # Freezing Settings
 freeze_vision: # true or false
